Bug 1934136 - Ensure we trigger any pending WM_PAINT once we stop being the initial blank window. r=win-reviewers,rkraesig

nsWindow::OnPaint() will basically lie and claim it has painted without
having painted if we are the early blank window. Make sure that once we
stop being the early blank window, we do any remaining work we might
need.

Differential Revision: https://phabricator.services.mozilla.com/D231877